fix(client): align map and search

--- a/client/pages/report-Pet/styles.css
+++ b/client/pages/report-Pet/styles.css
@@ -11,6 +11,6 @@ body {
 }
 .search-form {
   background-color: white !important;
+  align-content: center !important;
 }
-
 
